--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
+
+
 body {
-  background-image: url('images/_e619aba9-6999-4ea3-8878-4d6dc50062cc.jpeg');
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('https://images.unsplash.com/photo-1628498188873-579210ce622e?q=80&w=1854&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  margin: 0; /* Remove default margin */
-  padding: 0; /* Remove default padding */
+  margin: 0;
+  padding: 0; 
   scroll-behavior: smooth;
 }
 
@@ -15,23 +19,21 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-left: auto; /* Move the container to the right */
-  padding-right: 2rem; /* Add padding for spacing */
-}
+  margin-left: auto;
+  }
 
 .navbar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 2rem; /* Add some padding for spacing */
+  padding: 2rem;
   background-color:transparent;
 }
 
-/* Style the navigation links */
 .navbar ul {
   list-style-type: none;
   display: flex;
-  gap: 2rem; /* Adjust the gap between links */
+  gap: 2rem;
   margin: 0rem; 
 }
 
@@ -39,7 +41,7 @@ body {
   margin: 1rem;
   cursor: pointer;
   gap: 2rem;
-  color: rgb(0, 0, 0);
+  color: rgb(206, 206, 206);
 }
 
 .cont_caraousel {
@@ -49,12 +51,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  perspective: 1000px;
+  transform-style: preserve-3d;
 }
 
 
 #carouselExampleIndicators {
-  width: 100vw; 
-  background-color: rgb(47, 36, 36);
+  width: 90vw; 
   height: 100%;
   overflow: hidden; 
 }
@@ -63,6 +66,7 @@ body {
 .carousel-item img {
   max-width: 100vw; 
   height: 60vh; 
+  box-shadow:  0px 4px 8px rgba(136, 46, 46, 0.1);
 }
 
 
@@ -76,23 +80,23 @@ body {
 }
 
 .carousel-control-prev {
-  left:0; /* Position the left control button at the left edge */
+  left:0; 
 }
 
 .carousel-control-next {
-  right:0; /* Position the right control button at the right edge */
+  right:0;
 }
-/* Add animation class to the carousel caption */
+
 .carousel-caption {
-  animation: slideAndFade 3s ease-in-out; /* Adjust duration and easing as needed */
+  animation: slideAndFade 3s ease-in-out; 
 }
 
 
 @keyframes slideAndFade {
   0% {
-      opacity: 0; /* Start with 0 opacity */
+      opacity: 0; 
       transform: translateY(100px) scale(0.8);
-       /* Start 100px below its final position and slightly scaled down */
+       
        padding: 1rem;
   }
   50% {
@@ -101,14 +105,14 @@ body {
       padding: 10px;
   }
   100% {
-      opacity: 1; /* End with full opacity */
+      opacity: 1; 
       transform: translateY(0) scale(1.6); 
-      /* End at its final position with normal scale */
+      
       padding: 2rem;
   }
 }
 .carousel-caption h1{
-  color: blueviolet;
+  color: rgb(43, 226, 147);
   font-weight: 800;
 }
 
@@ -189,6 +193,78 @@ animation: kenburns-top 5s linear infinite alternate both;
   transform: rotate(-45deg);
 }
 */
+.content {
+  position: relative;
+  padding-top: 6rem;
+  background-color: transparent;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin:auto;
+  padding: 5rem;
+  padding-left: 5rem;
+}
+
+.content h3{
+  color: #fff;
+  display: inline;
+  padding-top: 3rem;
+margin-right: 4rem;
+}
+
+.content h2 {
+  color: #fff;
+  font-size: 5em;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  padding-left: 3rem;
+  display: inline;
+  margin: 0;
+}
+
+.content h2:nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 2px #e6e7e8;
+  margin-right: 10px;
+}
+
+.content h2:nth-child(2) {
+  color: #ececec;
+  animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 45%,
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+
+  50% {
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
+  }
+}
+
+
 
 .container {
   width: 300px;
@@ -197,6 +273,7 @@ animation: kenburns-top 5s linear infinite alternate both;
   border: 1px solid lightgray;
   margin: 20px auto;
   padding: 20px;
+  margin-top: 4rem;
 }
 
 .title {
@@ -208,7 +285,7 @@ animation: kenburns-top 5s linear infinite alternate both;
 }
 
 .input-group {
-  display: flex; /* make this a flex container */
+  display: flex; 
   flex-direction: row;
   justify-content:space-around;
   align-items:center;
@@ -217,8 +294,8 @@ animation: kenburns-top 5s linear infinite alternate both;
 
 .input-group label {
   width: 80px;
-  font-size: 15px;
-  color: gray;
+  font-size: 20px;
+  color: rgb(0, 72, 70);
 }
 
 .input-group input {
@@ -285,7 +362,7 @@ animation: kenburns-top 5s linear infinite alternate both;
 .latest_rates_display {
   margin-top: 10px;
   padding: 10px;
-  background-color: rgb(137, 174, 230);
+  background-color: rgb(35, 45, 63);
   border: 1px solid #ccc; 
   border-radius: 8px; 
   width: 40%; 
@@ -299,25 +376,30 @@ animation: kenburns-top 5s linear infinite alternate both;
 
 .latest_rates_display strong {
   margin-right: 10px; 
-  color: #df82dd; 
+  color: rgb(0, 91, 65); 
 }
 
 .latest_rates_display span {
-  color: rgb(100, 237, 235); 
+  color: rgb(0, 129, 112); 
 }
 
 .newspage {
   max-width: 600px;
-  margin: 2rem;
-  background-color: whitesmoke;
+  margin: 4rem;
+  background-color: white;
   border-radius: 1rem;
-  margin-top: 7rem;
-  padding-top: 3rem;
+  margin-top: 10rem;
+  padding-top: 1rem;
 
+}
+.news{
+  align-items: center;
+  color: white;
+  font-weight: bold;
 }
 
 .article {
-  border: 1px solid #b39999;
+  border: 1px  #0e0101;
   margin-bottom: 20px;
   padding: 15px;
 }
@@ -325,8 +407,9 @@ animation: kenburns-top 5s linear infinite alternate both;
 .article h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
-  color: blue;
+  color: rgb(0, 72, 70);
   font-weight: 800;
+  font-family: poppins;
 }
 
 .article p {
@@ -334,12 +417,12 @@ animation: kenburns-top 5s linear infinite alternate both;
   color: #555;
 }
 .conversion-table {
-  margin: 1rem;
+  margin: auto;
   height: 60%;
   width: 40%;
   margin-top: 3rem;
   float: right;
-  padding-right: 5rem;
+  padding-right: 9rem;
 }
 
 .conversion-table h3 {
@@ -370,9 +453,9 @@ animation: kenburns-top 5s linear infinite alternate both;
 }
 
 .conversion-table th {
-  background-color: #df7b7b;
+  background-color: #dbdbdb;
 }
 
 .conversion-table tr:hover {
-  background-color: coral; 
+  background-color: rgb(78, 64, 60); 
 }
