--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ margin-right: 4rem;
 
 .content h2:nth-child(2) {
   color: #ececec;
-  animation: animate 4s ease-in-out infinite;
+  animation: animate 6s ease-in-out infinite;
 }
 
 @keyframes animate {
@@ -279,7 +279,7 @@ margin-right: 4rem;
 .title {
   font-size: 24px;
   font-weight: bold;
-  color: #0078d4;
+  color: #244762;
   text-align: center;
   margin-bottom: 10px;
 }
