--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ animation: kenburns-top 5s linear infinite alternate both;
   color: #fff;
   display: inline;
   padding-top: 3rem;
-margin-right: 4rem;
+  margin-right: 4rem;
 }
 
 .content h2 {
@@ -332,7 +332,7 @@ margin-right: 4rem;
   width: 100px;
   height: 40px;
   border: none;
-  background-color: #0078d4;
+  background-color: rgb(0, 129, 112);
   color: white;
   font-size: 18px;
   cursor: pointer;
@@ -345,11 +345,11 @@ margin-right: 4rem;
   border: 2px solid rgb(16, 16, 114);
   font-weight: 800;
   color: #483131;
-  box-shadow: 0 0 40px 40px rgb(4, 255, 0) inset, 0 0 0 0 blue;
+  box-shadow: 0 0 40px 40px rgb(0, 129, 112) inset, 0 0 0 0 blue;
   transition: all 150ms ease-in-out;
 
   &:hover {
-    box-shadow: 0 0 10px 0 rgb(149, 149, 190) inset, 0 0 10px 4px blue;
+    box-shadow: 0 0 10px 0 rgb(149, 149, 190) inset, 0 0 10px 4px rgb(35, 45, 63);
   }
 }
 
@@ -362,7 +362,7 @@ margin-right: 4rem;
 .latest_rates_display {
   margin-top: 10px;
   padding: 10px;
-  background-color: rgb(35, 45, 63);
+  background-color: rgb(0, 129, 112);
   border: 1px solid #ccc; 
   border-radius: 8px; 
   width: 40%; 
@@ -376,11 +376,11 @@ margin-right: 4rem;
 
 .latest_rates_display strong {
   margin-right: 10px; 
-  color: rgb(0, 91, 65); 
+  color: rgb(244, 244, 244); 
 }
 
 .latest_rates_display span {
-  color: rgb(0, 129, 112); 
+  color: white; 
 }
 
 .newspage {
@@ -420,9 +420,8 @@ margin-right: 4rem;
   margin: auto;
   height: 60%;
   width: 40%;
-  margin-top: 3rem;
   float: right;
-  padding-right: 9rem;
+  padding-right: 2rem;
 }
 
 .conversion-table h3 {
