--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
   }
 }
 .carousel-caption h1{
-  color: rgb(43, 226, 147);
+  color: rgb(32, 57, 171);
   font-weight: 800;
 }
 
@@ -457,4 +457,59 @@ animation: kenburns-top 5s linear infinite alternate both;
 
 .conversion-table tr:hover {
   background-color: rgb(78, 64, 60); 
+}
+
+
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.calculator-container {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 250px;
+  height: 40%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.calculator-header {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  cursor: move;
+  border-radius: 5px 5px 0 0;
+}
+
+.calculator-body {
+  padding: 20px;
+}
+
+.calc-display {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 16px;
+}
+
+.calc-buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+}
+
+.calc-buttons button {
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
 }
